# mipt_parprog

./: CMakeLists.txt  GridPainter.cpp  GridPainter.hpp  def-eq.py  main.cpp
Life/: CMakeLists.txt  GridPainter.cpp  GridPainter.hpp  README.md  main.cpp
Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  interpret.py  mat_mul.cpp
a2b2n2/: CMakeLists.txt  main.cpp
lab2/: 0_baseline.cpp  0_mpi.cpp  1a_baseline.cpp  1a_mpi.cpp  2a_baseline.cpp  2a_mpi.cpp  CMakeLists.txt  lab_table.xlsx
zeroes/: CMakeLists.txt  first.cpp  second.cpp  third.cpp
